# SpectralRankingWithCovariates

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: NFL_full_experiments.py  NFL_full_experiments_seen.py  chamelon_experiments.py  chamelon_experiments_seen.py  lizard_experiments.py  lizard_experiments_seen.py  pokemon_expeirments_seen.py  pokemon_experiments.py
experiments/rank_inference/: NFL.py  chamelon.py  lizard.py  pokemon.py
experiments/rank_prediction/: NFL.py  chamelon.py  lizard.py  pokemon.py
src/.ipynb_checkpoints/: load_experiments-checkpoint.py  simulation-checkpoint.py  spektrankle_misc-checkpoint.py
src/data/: load_experiments.py
src/models/: baselines.py  prefkrr.py  rcca.py  spektrankers.py
