[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spektrankle"
version = "0.0.1"
authors = [
  { name="Siu Lun Chau", email="alanchau@hotmail.co.uk" },
]
description = "A package running spectral ranking with covariates algorithms"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Chau999/SpectralRankingWithCovariates"